[package]
name = "ccb"
version = "0.1.1"
edition = "2024"
authors = ["Liu Zhen <liuzhen9320@5.1.e.7.0.a.a.e.0.a.2.ip6.arpa>"]
description = "A beautiful, terminal-focused structured logger inspired by charmbracelet/log"
license = "MIT"
repository = "https://github.com/liuzhen9320/ccb"
homepage = "https://github.com/liuzhen9320/ccb#readme"
documentation = "https://docs.rs/ccb"
keywords = ["logging", "terminal", "structured", "colorful", "tracing"]
categories = ["development-tools::debugging"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
termcolor = "1.4"
atty = "0.2"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
